changed the valid test