@@ -6,9 +6,13 @@ apply plugin: TestingModelBasePlugin
 // At top level of build.gradle
 def currentOs = org.gradle.internal.os.OperatingSystem.current()
 def currentArch = System.getProperty("os.arch")
-def isLinux = currentOs.isLinux()
+def osName = org.gradle.internal.os.OperatingSystem.current()
+def platform = org.gradle.internal.os.OperatingSystem.current().isMacOsX() ? 'mac-aarch64' :
+               org.gradle.internal.os.OperatingSystem.current().isLinux() ? 'linux' : 'win'
+def isLinux = org.gradle.internal.os.OperatingSystem.current().isLinux()
 def isMac = currentOs.isMacOsX()
 def isWindows = currentOs.isWindows()
+def javafxVersion = '21.0.1'
 
 mainClassName = 'billiards.viewer.Main'
 
@@ -28,8 +32,12 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.7'  // can remove this now I think?
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'io.javaslang:javaslang:2.0.5'
+    implementation "org.openjfx:javafx-base:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-fxml:${javafxVersion}:${platform}"
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
-    implementation 'net.java.dev.jna:jna:4.5.1'
+    implementation 'net.java.dev.jna:jna:5.13.0'
     implementation 'org.fxmisc.richtext:richtextfx:0.10.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
@@ -42,6 +50,18 @@ test {
 compileJava {
     //options.compilerArgs << '-Xlint' << '-Werror'
     options.compilerArgs << '-Xlint'
+
+    if (platform == 'linux') {
+        options.compilerArgs += [
+            '--module-path', '/usr/share/openjfx/lib',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    } else {
+        options.compilerArgs += [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
 }
 
 jar {
@@ -75,10 +95,10 @@ sourceSets {
     }
 }
 
-applicationDefaultJvmArgs = ['-server', '-Djna.library.path=./build/libs/backend/shared/', '-Xss10000m']
+applicationDefaultJvmArgs = ['-server', '-Djna.library.path=./build/libs/backend/shared/', '-Xss1000m']
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 model {
 
@@ -94,7 +114,8 @@ model {
                 // Aug,8 2025 Marco,Mai
                 // for Aplle Arm platnorm there is an instruction to use java17 natively
                 if (currentOs.isMacOsX()){
-                    linker.args '-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb','-lboost_thread-mt', '-lboost_system-mt'
+                    cppCompiler.args '-I/opt/homebrew/include'
+                    linker.args '-L/opt/homebrew/lib','-L/opt/homebrew/opt/','-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb','-lboost_thread', '-lboost_system'
                 } else {
                     linker.args '-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb12','-lboost_thread', '-lboost_system'
                 }
@@ -130,7 +151,8 @@ model {
                 // Aug,8 2025 Marco,Mai
                 // for Aplle Arm platnorm there is an instruction to use java17 natively
                 if (currentOs.isMacOsX()){
-                    linker.args '-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb','-lboost_thread-mt','-lboost_system-mt'
+                    cppCompiler.args '-I/opt/homebrew/include'
+                    linker.args '-L/opt/homebrew/lib','-L/opt/homebrew/opt/','-lboost_unit_test_framework','-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb','-lboost_thread','-lboost_system'
                 } else {
                     linker.args '-lgmp', '-lmpfr', '-lmpfi', '-lsqlite3', '-ltbb','-lboost_thread','-lboost_system'
                 }
@@ -169,6 +191,29 @@ run.doFirst {
     // Having this hardcoded isn't the best, put it works for now
     //environment 'LD_PRELOAD', '/usr/local/Cellar/jemalloc/5.0.1/lib/libjemalloc.so.2'
     //commandLine "./test.fish"
+            // For native libraries
+    environment 'JNA_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
+    
+    if (isMac) {
+        environment 'DYLD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
+        jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+    else if (isLinux) {
+        environment 'LD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
+        jvmArgs = [
+            '--module-path', '/usr/share/openjfx/lib',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    } else {
+        environment 'LD_LIBRARY_PATH', "$projectDir/build/libs/backend/shared"
+        jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
 }
 
 task createLibraryFolders {
